--- a/index.html
+++ b/index.html
@@ -7,24 +7,9 @@
   <!-- Liens CSS -->
   <link rel="stylesheet" href="css/theme.css">
   <link rel="stylesheet" href="css/filters.css">
+  <link rel="stylesheet" href="css/maps.css">
   <style>
     /* Styles existants conservés */
-    /* Ajout du style pour le bouton de thème */
-    #theme-toggle {
-      position: fixed;
-      top: 20px;
-      right: 20px;
-      background: transparent;
-      border: none;
-      font-size: 24px;
-      cursor: pointer;
-      z-index: 1000;
-      transition: transform 0.3s;
-    }
-
-    #theme-toggle:hover {
-      transform: scale(1.2);
-    }
   </style>
 </head>
 <body>
@@ -36,14 +21,33 @@
     <p class="subtitle">Selon les notes et avis Google - Classement Sunday</p>
   </header>
 
-  <!-- Reste du contenu de la page existant -->
-  [Contenu précédent conservé]
+  <!-- Nouvelle section Carte -->
+  <section class="map-section">
+    <h2>Restaurants sur la carte</h2>
+    <div id="home-map"></div>
+  </section>
+
+  <!-- Filtres existants -->
+  <div class="filters-container">
+    <!-- Contenu des filtres conservé -->
+  </div>
+
+  <!-- Liste des restaurants -->
+  <div id="restaurant-list" class="restaurant-container">
+    <!-- Contenu existant des restaurants -->
+  </div>
 
   <!-- Scripts JS -->
   <script src="js/theme-toggle.js" type="module"></script>
   <script src="js/filters.js" type="module"></script>
-  <script>
-    // Scripts existants conservés
-  </script>
+  <script src="js/maps.js" type="module"></script>
+  
+  <!-- Note sur l'API Google Maps -->
+  <div class="api-note">
+    <small>
+      ⚠️ Notez que la carte nécessite une clé API Google Maps valide. 
+      En mode démo, certaines fonctionnalités peuvent être limitées.
+    </small>
+  </div>
 </body>
 </html>
