Correction des chemins CSS et JS pour le déploiement sur Netlify

--- a/index.html
+++ b/index.html
@@ -4,10 +4,10 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Top 5 des Meilleurs Restaurants de Paris</title>
-  <link rel="stylesheet" href="/css/theme.css">
-  <link rel="stylesheet" href="/css/filters.css">
-  <link rel="stylesheet" href="/css/maps.css">
-  <link rel="stylesheet" href="/css/reservation.css">
+  <link rel="stylesheet" href="css/theme.css">
+  <link rel="stylesheet" href="css/filters.css">
+  <link rel="stylesheet" href="css/maps.css">
+  <link rel="stylesheet" href="css/reservation.css">
   
   <!-- Métadonnées SEO -->
   <meta name="description" content="Découvrez les 5 meilleurs restaurants de Paris selon les notes Google - Filtrage, réservation, et expérience interactive.">
@@ -41,9 +41,9 @@
   </div>
 
   <!-- Scripts principaux -->
-  <script src="/js/filters.js" type="module"></script>
-  <script src="/js/maps.js" type="module"></script>
-  <script src="/js/theme-toggle.js" type="module"></script>
-  <script src="/js/main.js" type="module"></script>
+  <script src="js/filters.js" type="module"></script>
+  <script src="js/maps.js" type="module"></script>
+  <script src="js/theme-toggle.js" type="module"></script>
+  <script src="js/main.js" type="module"></script>
 </body>
 </html>
