--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
   <link rel="stylesheet" href="css/filters.css">
   <link rel="stylesheet" href="css/maps.css">
   <link rel="stylesheet" href="css/reservation.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
   
   <!-- Métadonnées SEO -->
   <meta name="description" content="Découvrez les 5 meilleurs restaurants de Paris selon les notes Google - Filtrage, réservation, et expérience interactive.">
@@ -16,28 +17,82 @@
 <body>
   <div id="app">
     <header>
+      <div class="site-logo">
+        <a href="index.html">Paris Food Guide</a>
+      </div>
+      <nav>
+        <ul>
+          <li><a href="#restaurants">Restaurants</a></li>
+          <li><a href="#map">Carte</a></li>
+        </ul>
+      </nav>
+    </header>
+
+    <div class="hero-banner">
       <h1>Top 5 des Meilleurs Restaurants de Paris</h1>
       <p class="subtitle">Selon les notes et avis Google - Classement Sunday</p>
-    </header>
+    </div>
 
     <div class="filters-container">
       <h2>Filtres de recherche</h2>
       <div id="filters">
         <!-- Filtres dynamiques seront chargés ici -->
+        <div class="loading-filters">Chargement des filtres...</div>
       </div>
     </div>
 
-    <div class="map-section">
+    <div class="map-section" id="map-section">
       <h2>Carte des restaurants</h2>
       <div id="map" style="width:100%; height:400px;"></div>
     </div>
 
-    <div class="restaurants-list">
+    <div class="restaurants-list" id="restaurants-section">
       <h2>Nos Restaurants</h2>
       <div id="restaurants">
         <!-- Liste des restaurants sera chargée dynamiquement -->
+        <div class="loading">
+          <div class="loading-spinner"></div>
+          <p>Chargement des restaurants...</p>
+        </div>
       </div>
     </div>
+    
+    <div class="about-section">
+      <h2>À propos de notre sélection</h2>
+      <p>Notre équipe a parcouru Paris à la recherche des meilleures adresses culinaires. Nous avons sélectionné ces 5 restaurants en nous basant sur les critères suivants :</p>
+      <ul>
+        <li>Notes et avis Google (minimum 4.7/5)</li>
+        <li>Qualité et originalité des plats</li>
+        <li>Service et ambiance</li>
+        <li>Rapport qualité-prix</li>
+      </ul>
+      <p>Que vous soyez amateur de cuisine du monde ou de gastronomie française, notre sélection saura satisfaire vos papilles !</p>
+    </div>
+    
+    <footer>
+      <div class="footer-content">
+        <div class="footer-section">
+          <h3>Paris Food Guide</h3>
+          <p>Votre guide des meilleurs restaurants parisiens</p>
+        </div>
+        <div class="footer-section">
+          <h3>Contact</h3>
+          <p>Email: contact@parisfoodguide.fr</p>
+          <p>Téléphone: 01 23 45 67 89</p>
+        </div>
+        <div class="footer-section">
+          <h3>Suivez-nous</h3>
+          <div class="social-icons">
+            <a href="#" aria-label="Facebook"><i class="fab fa-facebook"></i></a>
+            <a href="#" aria-label="Instagram"><i class="fab fa-instagram"></i></a>
+            <a href="#" aria-label="Twitter"><i class="fab fa-twitter"></i></a>
+          </div>
+        </div>
+      </div>
+      <div class="footer-bottom">
+        <p>&copy; 2025 Paris Food Guide. Tous droits réservés.</p>
+      </div>
+    </footer>
   </div>
 
   <!-- Scripts principaux -->
