Mise à jour de l'index avec les nouvelles références CSS et Google Fonts

--- a/index.html
+++ b/index.html
@@ -5,10 +5,13 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Top 5 des Meilleurs Restaurants de Paris</title>
   <link rel="stylesheet" href="css/theme.css">
+  <link rel="stylesheet" href="css/main.css">
+  <link rel="stylesheet" href="css/home.css">
   <link rel="stylesheet" href="css/filters.css">
   <link rel="stylesheet" href="css/maps.css">
   <link rel="stylesheet" href="css/reservation.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
+  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap" rel="stylesheet">
   
   <!-- Métadonnées SEO -->
   <meta name="description" content="Découvrez les 5 meilleurs restaurants de Paris selon les notes Google - Filtrage, réservation, et expérience interactive.">
@@ -22,8 +25,8 @@
       </div>
       <nav>
         <ul>
-          <li><a href="#restaurants">Restaurants</a></li>
-          <li><a href="#map">Carte</a></li>
+          <li><a href="#restaurants-section">Restaurants</a></li>
+          <li><a href="#map-section">Carte</a></li>
         </ul>
       </nav>
     </header>
@@ -96,6 +99,7 @@
   </div>
 
   <!-- Scripts principaux -->
+  <script src="js/data.js" type="module"></script>
   <script src="js/filters.js" type="module"></script>
   <script src="js/maps.js" type="module"></script>
   <script src="js/theme-toggle.js" type="module"></script>
