Mise à jour de index.html pour inclure le CSS de lightbox et l'attribution Pexels

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
   <link rel="stylesheet" href="css/filters.css">
   <link rel="stylesheet" href="css/maps.css">
   <link rel="stylesheet" href="css/reservation.css">
+  <link rel="stylesheet" href="css/lightbox.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap" rel="stylesheet">
   
@@ -94,11 +95,13 @@
       </div>
       <div class="footer-bottom">
         <p>&copy; 2025 Paris Food Guide. Tous droits réservés.</p>
+        <p class="legal-attribution">Images fournies par Pexels</p>
       </div>
     </footer>
   </div>
 
   <!-- Scripts principaux -->
+  <script src="js/imageService.js" type="module"></script>
   <script src="js/data.js" type="module"></script>
   <script src="js/filters.js" type="module"></script>
   <script src="js/maps.js" type="module"></script>
